refactor: provide uniformed download details
