# src/api/format.ts
@@ -1,9 +1,10 @@
 import type { NextApiRequest, NextApiResponse } from 'next';
 import { CustomHTTPError } from '../common/error';
 import type { IRouterLike } from '../common/validator';
-import type { IRegion, ISignal } from '../model';
+import type { ITripleValue } from '../model';
 import type { IRequestContext } from './middleware';
 import type { CacheDuration } from './model';
+import { injectCustomDetails, injectDetails } from './send/injectDetails';
 import sendCSV from './send/sendCSV';
 import sendJSON from './send/sendJSON';
 import sendVega, { IMultiVegaFactory, IVegaFactory } from './send/sendVega';
@@ -51,31 +52,70 @@ export function extractFormat<S extends string, V>(
 export interface ICommonOptions {
   title: string;
   cache?: CacheDuration;
-  signals?: (signal: string) => ISignal | undefined;
-  regions?: (region: string) => IRegion;
+  constantFields: { date?: Date; signal?: string; region?: string };
 }
 
 // eslint-disable-next-line @typescript-eslint/ban-types
-export async function sendFormat<T extends object>(
+export async function sendFormat<T extends ITripleValue>(
   req: NextApiRequest,
   res: NextApiResponse,
   ctx: IRequestContext,
   format: Formats,
-  data: () => Promise<T[]>,
+  loadData: () => Promise<T[]>,
   options: ICommonOptions & {
-    headers: (keyof T)[];
     vega?: IVegaFactory<T> | IMultiVegaFactory<T>;
   }
 ) {
-  if (format === Formats.csv) {
-    return sendCSV(req, res, await data(), options.headers, options);
-  }
-  if (format === Formats.json) {
-    return sendJSON(req, res, await data(), options);
+  if (format === Formats.csv || format === Formats.json) {
+    let data = await loadData();
+    let headers: (keyof T)[] = ['value', 'stderr'];
+
+    if (req.query.plain == null) {
+      // details
+      const r = injectDetails(data, options.constantFields);
+      data = r.data;
+      headers = r.headers as (keyof T)[];
+    } else {
+      const dynamicFields = (['region', 'signal', 'date'] as const).filter((d) => options.constantFields[d] != null);
+      headers = [dynamicFields, headers].flat();
+    }
+    if (format === Formats.csv) {
+      return sendCSV(req, res, data, headers as (keyof T)[], options);
+    }
+    return sendJSON(req, res, data, options);
   }
   // vega like
   if (!options.vega) {
     return res.status(404).json({ message: 'image formats not available' });
   }
-  return sendVega(req, res, ctx, format, data, options.vega, options);
+  return sendVega(req, res, ctx, format, loadData, options.vega, options);
+}
+
+// eslint-disable-next-line @typescript-eslint/ban-types
+export async function sendCustomFormat<T extends object>(
+  req: NextApiRequest,
+  res: NextApiResponse,
+  format: Formats,
+  loadData: () => Promise<T[]>,
+  options: ICommonOptions & {
+    headers: (keyof T)[];
+  }
+) {
+  if (format === Formats.csv || format === Formats.json) {
+    let data = await loadData();
+    let headers = options.headers;
+
+    if (req.query.plain == null) {
+      // details
+      const r = injectCustomDetails(data, options.headers);
+      data = r.data;
+      headers = r.headers as (keyof T)[];
+    }
+    if (format === Formats.csv) {
+      return sendCSV(req, res, data, headers as (keyof T)[], options);
+    }
+    return sendJSON(req, res, data, options);
+  }
+  // vega like
+  return res.status(404).json({ message: 'image formats not available' });
 }
