# src/pages/api/region/[region]/[signal]/[date].ts
@@ -5,7 +5,6 @@ import { fetchSignalRegionDate, resolveMetaSignalDate } from '@/api/data';
 import type { NextApiRequest, NextApiResponse } from 'next';
 import { formatAPIDate } from '@/common';
 import { estimateCacheDuration } from '@/api/model';
-import { regionByID } from '@/model';
 
 export default withMiddleware(async (req: NextApiRequest, res: NextApiResponse, ctx: IRequestContext) => {
   const { param: dateOrMagic, format } = extractFormat(req, 'date', extractDateOrMagic);
@@ -16,8 +15,10 @@ export default withMiddleware(async (req: NextApiRequest, res: NextApiResponse, 
   const data = () => fetchSignalRegionDate(ctx, signal, region, date);
   return sendFormat(req, res, ctx, format, data, {
     title: `${region.name}-${signal.id}-${formatAPIDate(date)}`,
-    headers: ['region', 'date', 'value', 'stderr'],
     cache: estimateCacheDuration(date),
-    regions: regionByID,
+    constantFields: {
+      signal: signal.id,
+      date,
+    },
   });
 });
